@@ -419,17 +419,17 @@ Ignores setting of `py-shell-switch-buffers-on-execute', output-buffer will bein
                   ((and py-shell-switch-buffers-on-execute py-split-windows-on-execute-p)
                    (switch-to-buffer (current-buffer))
                    (delete-other-windows)
-                   (funcall py-split-windows-on-execute-function)
                    (switch-to-buffer regbuf)
                    (pop-to-buffer procbuf))
                   (py-split-windows-on-execute-p
                    (delete-other-windows)
-                   (funcall py-split-windows-on-execute-function)
                    (pop-to-buffer procbuf)
                    (set-buffer procbuf)
-                   (message "current-buffer: %s" (current-buffer))
-                   ))
-            (message "Output buffer: %s" procbuf)
+                   (funcall py-split-windows-on-execute-function)
+                   (switch-to-buffer regbuf)))
+            (unless (string= (buffer-name (current-buffer)) procbuf)(message "Output buffer: %s" procbuf))
+            ;; (message "py-shell-switch-buffers-on-execute:  %s"  py-shell-switch-buffers-on-execute)
+            ;; (message "py-split-windows-on-execute-p: %s" py-split-windows-on-execute-p)
             (sit-for 0.1)
             (unless py-execute-keep-temporary-file-p
               (delete-file file)
